# Audio-Course

./: .gitignore  README.md  gradio_demo.py  pyproject.toml  unit1_audio_data.py
units/unit1_working_with_audio_data/: notebook.ipynb
units/unit2_audio_applications/: README.md  generation_demo.py  gradio_demo.py  notebook.ipynb  walkthrough.py
units/unit3_transformer_architectures/: README.md  gradio_demo.py  notebook.ipynb  walkthrough.py
units/unit4_music_genre_classifier/: README.md  colab_handson.ipynb  finetune.py  gradio_demo.py  notebook.ipynb  walkthrough.py
