[project]
name = "audio-course"
version = "0.1.0"
description = "Worked examples for the Hugging Face Audio Course (one self-contained folder per unit)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets==3.6.0",        # last release using the soundfile/librosa audio backend
                              # (4.x switches to torchcodec + FFMPEG, painful on Windows)
    "librosa==0.11.0",        # path= API, NumPy 2.x support; pulls in soundfile + pooch
    "soundfile>=0.12.1",      # libsndfile WAV/FLAC decoding, native on Windows
    "pooch>=1.8",             # required by librosa.ex() to download the example clip
    "transformers>=4.44,<5",  # feature extractors (Unit 1) + pipelines (Unit 2)
    "accelerate>=0.30",       # Unit 2: transformers pipelines use it for model loading
    "numpy>=1.26,<3",
    "matplotlib>=3.8",
    "gradio>=4.44",           # optional listening / inference demos
    "torch>=2.2",             # CPU build is enough; no GPU required
    "ipykernel",              # run the notebooks
    "jupyterlab",             # open/run the notebooks
    "ipywidgets",             # interactive tqdm progress bars (silences IProgress warning)
]

[project.optional-dependencies]
# Multi-GB, slow-on-CPU audio generation (Unit 2: Bark TTS + MusicGen).
# Install only when you want to run the generation demo:  uv sync --extra generation
generation = [
    "sentencepiece>=0.2",     # MusicGen's T5 text-encoder tokenizer
    "protobuf>=4,<6",         # required to load the sentencepiece-based config
    "scipy>=1.11",            # write generated audio to .wav
]

# Unit 4 fine-tuning (the GTZAN training run). Optional: the pre-trained survey, the
# genre-classifier demo, and the CPU smoke test all run on the core deps.
# Install before a full training run:  uv sync --extra training
training = [
    "evaluate>=0.4",          # course uses evaluate.load("accuracy") (downloads a tiny metric module once)
    "tensorboard>=2.14",      # optional Trainer logs (report_to="tensorboard")
]

# This is a runnable example, not an installable library: tell uv not to build it
# as a package (otherwise `uv sync` looks for a module to install).
[tool.uv]
package = false

# Pull torch from the CPU-only wheel index so uv never downloads a multi-GB CUDA build
# on a machine without an NVIDIA GPU.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
